--- a/src/components/ControlPanel/itemBox.css
+++ b/src/components/ControlPanel/itemBox.css
@@ -15,9 +15,9 @@
     width: 100%;
     height: 100%;
 }
-    .item-box--active .item-box__content {
-        opacity: 0.1;
-    }
+.item-box--active .item-box__content {
+    opacity: 0.1;
+}
 
 .item-box__content__title {
     height: 3em;
@@ -42,19 +42,21 @@
 }
 
 .item-box__content-overlay {
-	display: none;
+    display: flex;
     position: absolute;
-    top: 0;
+    top: 149px;
     left: 0;
     width: 100%;
     height: 100%;
     border-top: 6px solid #0e93dd;
     align-items: center;
     text-align: center;
+    transition: .4s;
 }
 
 .item-box--active .item-box__content-overlay {
-    display: flex;
+    top: 0;
+    transition: .4s;
 }
 
 .content-overlay__title {
